--- a/src/WASM/Shared/AppBar.razor
+++ b/src/WASM/Shared/AppBar.razor
@@ -1,8 +1,8 @@
 ﻿@inject NavigationManager NavManager
 
 <MudAppBar>
-    <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-    &nbsp;
+    <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" Class="mr-3" />
+    <MudIcon Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Class="mr-3"/>
     <MudLink Href="/" Underline="Underline.None"><MudText Typo="Typo.h6" Class="text-white">Huy NG</MudText></MudLink>
     <MudSpacer />
     <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" />
