--- a/src/WASM/Shared/Drawer.razor
+++ b/src/WASM/Shared/Drawer.razor
@@ -1,25 +1,18 @@
 ﻿@inject NavigationManager NavManager
 
 <MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen" Elevation="5" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
-    @if (isAdminPages)
-    {
-        <AdminNavMenu />
-    }
-    else
-    {
-        <PublicNavMenu />
-    } 
+    <AuthorizeView>
+        <Authorized>
+            <AdminNavMenu />
+        </Authorized>
+        <NotAuthorized>
+            <PublicNavMenu />
+        </NotAuthorized>
+    </AuthorizeView>
 </MudDrawer>
 
 @code
 {
     [Parameter]
     public bool DrawerOpen { get; set; }
-    private bool isAdminPages = false;
-
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (NavManager.Uri.Contains("admin"))
-            isAdminPages = true;
-    }
 }
