Securing admin pages.

--- a/src/WASM/Pages/Admin/Archievement/Edit.razor
+++ b/src/WASM/Pages/Admin/Archievement/Edit.razor
@@ -1,6 +1,8 @@
 ﻿@page "/admin/archievements/edit"
 @page "/admin/archievements/edit/{Id:int}"
 
+@attribute [Authorize]
+
 @inject NavigationManager NavManager
 @inject ISnackbar Snackbar
 @inject IArchievementRepo ArchievementRepo
