--- a/src/WASM/Pages/Admin/Image/Index.razor
+++ b/src/WASM/Pages/Admin/Image/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/admin/images"
 
+@attribute [Authorize]
+
 @inject NavigationManager NavManager
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
