--- a/src/WASM/Pages/Admin/Profile.razor
+++ b/src/WASM/Pages/Admin/Profile.razor
@@ -1,5 +1,7 @@
 ﻿@page "/admin/profile"
 
+@attribute [Authorize]
+
 @inject HttpClient HttpClient
 @inject ISnackbar Snackbar
 @inject IUserRepo UserRepo
