--- a/src/WASM/Pages/Admin/Dashboard.razor
+++ b/src/WASM/Pages/Admin/Dashboard.razor
@@ -1,22 +1,20 @@
 ﻿@page "/admin"
 
+@attribute [Authorize]
+
 @inject IServiceRepo ServiceRepo
 @inject IImageRepo ImageRepo
 @inject IArchievementRepo ArchievementRepo
 @inject IPostRepo PostRepo
 
-<AuthorizeView>
-    <Authorized>
-        <Breadcrumbs />
+<Breadcrumbs />
 
-        <SummaryCards ServiceList="@_services"
-                      ImageList="@_images"
-                      ArchievementList="_archievements"
-                      PostList="_posts" />
+<SummaryCards ServiceList="@_services"
+              ImageList="@_images"
+              ArchievementList="_archievements"
+              PostList="_posts" />
 
-        <VisitorsChart />
-    </Authorized>
-</AuthorizeView>
+<VisitorsChart />
 
 @code
 {
