--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -2,6 +2,7 @@
 @using System.Net.Http.Json
 @using System.Net.Http.Headers
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
