--- a/src/WASM/Pages/Admin/Image/Index.razor
+++ b/src/WASM/Pages/Admin/Image/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/admin/images"
 
-@attribute [Authorize]
-
 @inject NavigationManager NavManager
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
@@ -67,6 +65,9 @@
 
 @code
 {
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
+
     private IEnumerable<ImageDto> Images = new List<ImageDto>();
     private ImageDto Image = new ImageDto();
     private IBrowserFile imageUpload;
@@ -78,6 +79,13 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+
         Images = await ImageRepo.GetAllAsync(ApiEndPoints.ImageEndpoint);
     }
 
