--- a/src/WASM/Pages/Admin/Profile.razor
+++ b/src/WASM/Pages/Admin/Profile.razor
@@ -1,7 +1,6 @@
 ﻿@page "/admin/profile"
 
-@attribute [Authorize]
-
+@inject NavigationManager NavManager
 @inject HttpClient HttpClient
 @inject ISnackbar Snackbar
 @inject IUserRepo UserRepo
@@ -100,8 +99,10 @@
 </MudGrid>
 
 @code {
-    public string TextValue { get; set; }
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
 
+    public string TextValue { get; set; }
     private UserDto User = new();
     private IBrowserFile imageUpload;
     private string imageDataUrl = string.Empty;
@@ -111,6 +112,13 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+
         User = await UserRepo.GetUserAsync(ApiEndPoints.UserEndpoint);
         imageDataUrl = $"{ApiEndPoints.ServerBaseUrl}/{User.AvatarImagePath}";
     }
