--- a/src/WASM/Pages/Admin/Service/Edit.razor
+++ b/src/WASM/Pages/Admin/Service/Edit.razor
@@ -1,8 +1,6 @@
 ﻿@page "/admin/services/edit"
 @page "/admin/services/edit/{Id:int}"
 
-@attribute [Authorize]
-
 @inject NavigationManager NavManager
 @inject ISnackbar Snackbar
 @inject IServiceRepo ServiceRepo
@@ -34,8 +32,21 @@
     [Parameter]
     public int Id { get; set; } = 0;
 
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
+
     private ServiceDto Service = new ServiceDto();
     private bool submitResult = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+    }
 
     protected override async Task OnParametersSetAsync()
     {
