--- a/src/WASM/Pages/Admin/Service/Index.razor
+++ b/src/WASM/Pages/Admin/Service/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/admin/services"
 
-@attribute [Authorize]
-
 @inject NavigationManager NavManager
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
@@ -46,12 +44,21 @@
 
 @code
 {
-    private IEnumerable<ServiceDto> Services = new List<ServiceDto>();
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
 
+    private IEnumerable<ServiceDto> Services = new List<ServiceDto>();
     private string searchString = "";
 
     protected override async Task OnInitializedAsync()
     {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+
         Services = await ServiceRepo.GetAllAsync(ApiEndPoints.ServiceEndpoint);
     }
 
