--- a/src/WASM/Pages/Admin/Skill/Edit.razor
+++ b/src/WASM/Pages/Admin/Skill/Edit.razor
@@ -32,8 +32,21 @@
     [Parameter]
     public int Id { get; set; } = 0;
 
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
+
     private SkillDto Skill = new SkillDto();
     private bool submitResult = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+    }
 
     protected override async Task OnParametersSetAsync()
     {
