--- a/src/WASM/Pages/Admin/Skill/Index.razor
+++ b/src/WASM/Pages/Admin/Skill/Index.razor
@@ -50,12 +50,21 @@
 
 @code
 {
-    private IEnumerable<SkillDto> Skills = new List<SkillDto>();
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthState { get; set; }
 
+    private IEnumerable<SkillDto> Skills = new List<SkillDto>();
     private string searchString = "";
 
     protected override async Task OnInitializedAsync()
     {
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            var localRedirect = "/" + NavManager.ToBaseRelativePath(NavManager.Uri);
+            NavManager.NavigateTo($"/admin/login?returnUrl={Uri.EscapeDataString(localRedirect)}");
+        }
+
         Skills = await SkillRepo.GetAllAsync(ApiEndPoints.SkillEndpoint);
     }
 
