--- a/src/WASM/Shared/Drawer.razor
+++ b/src/WASM/Shared/Drawer.razor
@@ -1,6 +1,6 @@
 ﻿@inject NavigationManager NavManager
 
-<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen" Elevation="5" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
+@*<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen" Elevation="5" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
     <AuthorizeView>
         <Authorized>
             <AdminNavMenu />
@@ -9,6 +9,17 @@
             <PublicNavMenu />
         </NotAuthorized>
     </AuthorizeView>
+</MudDrawer>*@
+
+<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen" Elevation="5" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
+    @if (NavManager.Uri.Contains("admin"))
+    {
+        <AdminNavMenu />
+    }
+    else
+    {
+        <PublicNavMenu />
+    } 
 </MudDrawer>
 
 @code
