Update layout using Lorem Ipsum and add loading screen spinner.

--- a/src/WASM/Components/Public/Home.razor
+++ b/src/WASM/Components/Public/Home.razor
@@ -6,7 +6,7 @@
                     <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="@($"{ApiEndPoints.ServerBaseUrl}/{AvatarPath}")" Height="200" Width="200" Class="rounded-circle" />
                 </div>
                 <MudText Typo="Typo.h4" Align="Align.Center" Class="text-white mt-5">
-                    Hi! I'm Huy and I'm a DotNet developer.
+                    Hi! I'm a DotNet developer.
                 </MudText>
             </div>
         </MudPaper>
