--- a/src/WASM/Components/Public/Testimonials.razor
+++ b/src/WASM/Components/Public/Testimonials.razor
@@ -5,8 +5,8 @@
                 <div class="d-flex justify-center">
                     <MudIcon Icon="@Icons.Filled.FormatQuote" Class="text-white" Style="font-size: 5rem"></MudIcon>
                 </div>
-                <MudText Typo="Typo.h3" Class="d-block text-center text-white">"This is some quote"</MudText>
-                <MudText Typo="Typo.h5" Class="d-block text-center text-white">Some author name</MudText>
+                <MudText Typo="Typo.h3" Class="d-block text-center text-white">"Neque sit amet, consectetur, adipisci velit..."</MudText>
+                <MudText Typo="Typo.h5" Class="d-block text-center text-white">Lorem Ipsum</MudText>
             </div>
         </MudPaper>
     </MudItem>
