--- a/src/WASM/Shared/AppBar.razor
+++ b/src/WASM/Shared/AppBar.razor
@@ -5,7 +5,7 @@
 <MudAppBar>
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" Class="mr-3" />
     <MudIcon Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Class="mr-3" />
-    <MudLink Href="/" Underline="Underline.None"><MudText Typo="Typo.h6" Class="text-white">Huy NG</MudText></MudLink>
+    <MudLink Href="/" Underline="Underline.None"><MudText Typo="Typo.h6" Class="text-white">Mud Blazor</MudText></MudLink>
     <MudSpacer />
     <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" />
     <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" />
